--- a/Paginas/Pagina_Categorias/rosas.html
+++ b/Paginas/Pagina_Categorias/rosas.html
@@ -11,6 +11,9 @@
         <meta name="keywords" content="envio de flores, latin flores, flores express, floreria en linea, enviar flores, argentina, Floreria capital federal, floreria buenos aires, enviar express, chocolates, peluches, osos, regalos flores, flores regalos, flores buenos aires, flores capital federal"/>
         <meta charset="utf-8"/>
 
+        <!-- ----- link de font asewome para menu responsive ------------>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
         
 
         <!-- LINK DE SASS -->
@@ -117,7 +120,13 @@
 
     <nav class="NavMenu">Elija una Categoria
 
-    <section id="Categoria">
+        <section id="Categoria"></section>
+            <input type="checkbox" id="abrirmenu">
+            <label for="abrirmenu" class="menubtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+
+    
             <div class="category_list">
                 <a href="../../index.html" class="category_item " category="TODOS"> TODOS</a>
                 <a href="rosas.html" class="Category_item ct_item-active" category="Rosas"> Rosas</a>
