--- a/Paginas/Pagina_Categorias/canastas.html
+++ b/Paginas/Pagina_Categorias/canastas.html
@@ -11,10 +11,12 @@
         <meta name="keywords" content="envio de flores, latin flores, flores express, floreria en linea, enviar flores, argentina, Floreria capital federal, floreria buenos aires, enviar express, chocolates, peluches, osos, regalos flores, flores regalos, flores buenos aires, flores capital federal"/>
         <meta charset="utf-8"/>
 
-        
+           <!-- ----- link de font asewome para menu responsive ------------>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
         <!-- LINK DE SASS -->
-        <link rel="stylesheet" href="../../Estilos.CSS">
+        <link rel="stylesheet" href="../../CSS/destino.css">
         <link rel="stylesheet" href="../../Font.css">
 
 
@@ -26,7 +28,8 @@
 
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
-            </style>
+            @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+        </style>
 
     </head>
 
@@ -99,42 +102,38 @@
 
 
             <!-- BUSCADORES Y SELECCION DE ENTREGA -->
-
-    <div id="buscadores">
-        <form class="form"  action="">
-            <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
-
-                <span>Capital Federal</span>
-               <input type="radio" name="zona de envio" >
-               <span>Gran Buenos Aires</span>
-               <input type="Radio" name="zona de envio">
-               <span>Interior del Pais</span>
-               <input type="Radio" name="zona de envio">
-
-        </form>
-
-    </div>
+            <div id="buscadores">
+                <form class="form"  action="search">
+                <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
+                <span>Capital Federal
+                <input type="radio" name="zona de envio" ></span>
+                <span>Gran Buenos Aires
+                <input type="Radio" name="zona de envio"></span>
+                <span>Interior del Pais
+                <input type="Radio" name="zona de envio"></span>
+                </form>
+            </div>
 
                     <!-- CATEGORIAS -->
 
-    <nav class="NavMenu">Elija una Categoria
-
-    <section id="Categoria" class="border">
-        <div class="category_list">
-            <a href="../../index.html" class="category_item" category="TODOS"> TODOS</a>
-            <a href="rosas.html" class="Category_item" category="Rosas"> Rosas</a>
-            <a href="floreros.html" class="Category_item" category="Floreros"> Floreros</a>
-            <a href="canastas.html" class="Category_item ct_item-active" category="Canastas"> Canastas</a>
-            <a href="comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
-            <a href="desayunos.html" class="Category_item" category="Desayunos"> Desayunos</a>
-        </div>
-
-
+    <nav class="NavMenu"><h1 class="elegircategoria">Elija una Categoria</h1>
+    
+        <section id="Categoria"></section>
+            <input type="checkbox" id="abrirmenu">
+            <label for="abrirmenu" class="menubtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <ul class="category_list">
+               <li><a href="../../index.html" class="category_item " category="TODOS"> TODOS</a></li>
+                <li><a href="rosas.html" class="Category_item" category="Rosas"> Rosas</a></li>
+                <li><a href="floreros.html" class="Category_item" category="Floreros"> Floreros</a></li>
+                <li><a href="canastas.html" class="Category_item ct_item-active" category="Canastas"> Canastas</a></li>
+                <li><a href="comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a></li>
+                <li><a href="desayunos.html" class="Category_item" category="Desayunos"> Desayunos</a></li>
+            </ul>
+        </section>
 
     </nav>
-
-    </section>
-
     <!-- fin categorias -->
 
 
