--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
     </style>
 
     <!------- LINK DE SITEMAP -------->
@@ -40,7 +41,7 @@
     <header class="border">
         <nav class="secciondearriba">
 
-            <div class="Seccion"><a href="index.html"><li>NOSOTROS</li></a></div> 
+            <div class="Seccion"><li><a href="index.html">NOSOTROS</li></a></div> 
             <div class="Seccion"><li><a href="Paginas/Pagina_header/fechas_especiales.html"> Fechas Especiales </a></li></div>
             <div class="Seccion"><li><a href="paginas/Pagina_header/Costos_envio.html">Costos de envio</a></li></div>
             <div class="Seccion"> <li><a href="Paginas/Pagina_header/Como_comprar.html">¿Como comprar?</a></li></div>
@@ -90,7 +91,7 @@
         <!-------------- BUSCADORES Y SELECCION DE ENTREGA ------------->
 
     <div id="buscadores">
-        <form class="form"  action="">
+        <form class="form"  action="search">
             <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
             <span>Capital Federal
             <input type="radio" name="zona de envio" ></span>
@@ -102,17 +103,15 @@
     </div>
           <!----------------- CATEGORIAS -------------------->
 
-    <nav class="NavMenu">Elija una Categoria
+    <nav class="NavMenu"><h1 class="elegircategoria">Elija una Categoria</h1>
     
     <section id="Categoria" class="border"></section>   
         <input type="checkbox" id="abrirmenu">
         <label for="abrirmenu" class="menubtn">
             <i class="fa-solid fa-bars"></i>
         </label>
-
- 
         <ul class="category_list">
-            <li><a href="Index.HTML" class="category_item ct_item-active" category="TODOS"> TODOS</a></li>
+            <li><a href="Index.HTML" class="category_item ct_item-active" category="TODOS">TODOS</a></li>
             <li><a href="Paginas/Pagina_Categorias/rosas.html" class="Category_item" category="Rosas"> Rosas</a></li>
             <li><a href="Paginas/Pagina_Categorias/floreros.html" class="Category_item" category="Floreros"> Floreros</a></li>
             <li><a href="Paginas/Pagina_Categorias/canastas.html" class="Category_item" category="Canastas"> Canastas</a></li>
