--- a/Paginas/Pagina_header/Registrate.html
+++ b/Paginas/Pagina_header/Registrate.html
@@ -10,17 +10,20 @@
         <meta name="author" content="Nicolas Cerecedo"/>
         <meta name="keywords" content="envio de flores, latin flores, flores express, floreria en linea, enviar flores, argentina, Floreria capital federal, floreria buenos aires, enviar express, chocolates, peluches, osos, regalos flores, flores regalos, flores buenos aires, flores capital federal"/>
         <meta charset="utf-8"/>
+         <!-- ----- link de font asewome para menu responsive ------------>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <link rel="stylesheet" href="../font.css">
-        <link rel="stylesheet" href="../../Estilos.CSS">
+        <link rel="stylesheet" href="../../CSS/destino.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
-            </style>
+          @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
+          @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+        </style>
 
     </head>
 
@@ -92,20 +95,17 @@
 
             <!-- BUSCADORES Y SELECCION DE ENTREGA -->
 
-            <div id="buscadores">
-            <form class="form"  action="">
-                <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
-               <span>Capital Federal</span>
-               <input type="radio" name="zona de envio" >
-               <span>Gran Buenos Aires</span>
-               <input type="Radio" name="zona de envio">
-               <span>Interior del Pais</span>
-               <input type="Radio" name="zona de envio">
-
-           </form>
-
-        </div>
-
+    <div id="buscadores">
+        <form class="form"  action="search">
+            <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
+            <span>Capital Federal
+            <input type="radio" name="zona de envio" ></span>
+            <span>Gran Buenos Aires
+            <input type="Radio" name="zona de envio"></span>
+            <span>Interior del Pais
+            <input type="Radio" name="zona de envio"></span>
+        </form>
+    </div>
 
 <!-- datos de registro -->
 <hr>
