--- a/Paginas/finalizarcompra.html
+++ b/Paginas/finalizarcompra.html
@@ -13,15 +13,17 @@
 
         <link rel="stylesheet" href="../font.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+         <!-- ----- link de font asewome para menu responsive ------------>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" href="../Estilos.CSS">
-
+        <link rel="stylesheet" href="../CSS/destino.css">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
-            </style>
+          @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
+          @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+      </style>
 
     </head>
 
@@ -29,22 +31,19 @@
 
     <!-- BODY  -->
 
-    <body id="grid-area">
+<body id="grid-area">
 
 
-        <header class="border">
-        <ol class="secciondearriba">
+      <header class="border">
+        <nav class="secciondearriba">
 
-            <div class="Seccion"><a href="../index.html"><li>NOSOTROS</li></div></a>
+            <div class="Seccion"><li><a href="../index.html">NOSOTROS</li></a></div> 
+            <div class="Seccion"><li><a href="Pagina_header/fechas_especiales.html"> Fechas Especiales </a></li></div>
+            <div class="Seccion"><li><a href="Pagina_header/Costos_envio.html">Costos de envio</a></li></div>
+            <div class="Seccion"> <li><a href="Pagina_header/Como_comprar.html">¿Como comprar?</a></li></div>
+            <div class="Seccion"> <li><a href="Pagina_header/Registrate.html"> Registrate</a></li> </div>
 
-            <div class="Seccion"><li><a href="../Paginas/Pagina Header/fechas_especiales.html"> Fechas Especiales </a></li></div>
-
-            <div class="Seccion"><li><a href="../Paginas/Pagina Header/Costos_envio.html">Costos de envio</a></li></div>
-
-            <div class="Seccion"> <li><a href="../Paginas/Pagina Header/Como_comprar.html">¿Como comprar?</a></li></div>
-
-            <div class="Seccion"> <li><a href="../Paginas/Pagina Header/Registrate.html"> Registrate</a></li> </div>
-        </ol>
+        </nav>
 
 
          <!-- ICONOS DE FACEBOOK E INSTAGRAM Y LOGO ENVIO FLORES-->
@@ -68,7 +67,7 @@
                   <img src="../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="../imagenes/EnvioFlores_3.png" class="d-flex" alt="...">
+                  <img src="../imagenes/EnvioFlores_2.png" class="d-flex" alt="...">
                 </div>
                 <div class="carousel-item">
                   <img src="../imagenes/EnvioFlores_4.png" class="d-flex" alt="...">
@@ -92,24 +91,17 @@
 
 
             <!-- BUSCADORES Y SELECCION DE ENTREGA -->
-
-            <div id="buscadores">
-            <form class="form"  action="">
-                <input type="text" name="" placeholder="">
-
-
-               <span>Capital Federal</span>
-               <input type="radio" name="zona de envio" >
-               <span>Gran Buenos Aires</span>
-               <input type="Radio" name="zona de envio">
-               <span>Interior del Pais</span>
-               <input type="Radio" name="zona de envio">
-
-           </form>
-
-        </div>
-
-
+    <div id="buscadores">
+        <form class="form"  action="search">
+        <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
+        <span>Capital Federal
+        <input type="radio" name="zona de envio" ></span>
+        <span>Gran Buenos Aires
+        <input type="Radio" name="zona de envio"></span>
+        <span>Interior del Pais
+        <input type="Radio" name="zona de envio"></span>
+        </form>
+    </div>
         <!--  -->
                           
                           <table class="table">
