SEO y otros cambios
modifique el SEO de la mayoria de las paginas que restaban.

--- a/Paginas/Pagina_Categorias/canastas.html
+++ b/Paginas/Pagina_Categorias/canastas.html
@@ -142,27 +142,27 @@
                 <!-- PRODUCTOS -->
 <section id="Productos" class="ListadeProductos">
     <div class="product-item" category="Canastas">
-        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_24_rosas_con_bombones.jpg" alt="" >
+        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_24_rosas_con_bombones.jpg" alt="canasta 24 rosas con bombones" >
         Canasta de 24 rosas con BOMBONES</a>
     </div>
     <div class="product-item" category="Canastas">
-        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_24_rosas_sin_bombones.jpg" alt="" >
+        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_24_rosas_sin_bombones.jpg" alt="canasta de 24 rosas sin bombones" >
         Canasta de 24 rosas SIN BOMBONES</a>
     </div>
     <div class="product-item" category="Canastas">
-        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_floresblancas_Estacion.jpg" alt="" >
+        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_floresblancas_Estacion.jpg" alt="canasta de flores blancas de estacion" >
         Canasta de Flores Blancas de Estacion</a>
     </div>
     <div class="product-item" category="Canastas">
-        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_gerberas_rosas.jpg" alt="" >
+        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_gerberas_rosas.jpg" alt="canasta gerberas y rosas" >
         Canasta de Gerberas y Rosas</a>
     </div>
     <div class="product-item" category="Canastas">
-        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_rosas_lilium.jpg" alt="" >
+        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_rosas_lilium.jpg" alt="canasta de rosas y lilium" >
         Canasta Rosas y Lilium</a>
     </div>
     <div class="product-item" category="Canastas">
-        <a href="#"><img src="../../imagenes/PRODUCTOS/Canasta_jazmines.jpg" alt="" >
+        <a href="#"><img src="../../imagenes/PRODUCTOS/canasta_jazmines.jpg" alt="canasta de jazmines" >
         Canasta de Jazmines</a>
     </div>
 </section>
