--- a/Paginas/Pagina_Categorias/comestibles.html
+++ b/Paginas/Pagina_Categorias/comestibles.html
@@ -149,7 +149,7 @@
 
                <div class="product-item" category="Comestibles">
                 <a href="#">
-                  <img src="../../imagenes/PRODUCTOS/bandeja_te_quiero.jpg" alt="" >
+                  <img src="../../imagenes/PRODUCTOS/bandeja_te_quiero.jpg" alt="bandeja te quiero" >
                 Bandeja Te Quiero</a>
             </div>
 
