--- a/Paginas/Pagina_Categorias/desayunos.html
+++ b/Paginas/Pagina_Categorias/desayunos.html
@@ -152,7 +152,7 @@
 
 
              <div class="product-item" category="Desayunos">
-              <a href="#">  <img src="../../imagenes/PRODUCTOS/desayuno.jpg" alt="" >
+              <a href="#">  <img src="../../imagenes/PRODUCTOS/desayuno.jpg" alt="desayuno" >
                  Desayuno</a>
             </div>
 
