--- a/Paginas/Pagina_Categorias/floreros.html
+++ b/Paginas/Pagina_Categorias/floreros.html
@@ -153,56 +153,56 @@
 
          <div class="product-item" category="Floreros">
             <a href="../../Paginas/Pagina_productos/FloRosLilGer.html">
-            <img src="../../imagenes/PRODUCTOS/florero_rosas_gerberas_lilium.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/florero_rosas_gerberas_lilium.jpg" alt="florero rosas y gerberas" >
            Florero con Rosas, Lilium y Gerberas</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="../../Paginas/Pagina_productos/FloRosItaliano.html">
-            <img src="../../imagenes/PRODUCTOS/florero_imperial_rosas.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/florero_imperial_rosas.jpg" alt="florero rosas imperial" >
            Florero con Rosas Italiano</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="../../Paginas/Pagina_productos/FloRosRosadas.html">
-            <img src="../../imagenes/PRODUCTOS/florero_rosas_rosadas.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/florero_rosas_rosadas.jpg" alt="florero rosas rosadas" >
            Florero Rosas Rosadas</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="#">
-                 <img src="../../imagenes/PRODUCTOS/florero_lishiantus.jpg" alt="" >
+                 <img src="../../imagenes/PRODUCTOS/florero_lishiantus.jpg" alt="florero lisianthus" >
            Florero Lisianthus Premium</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="#">  
-                <img src="../../imagenes/PRODUCTOS/florero_rosas_amarillas.jpg" alt="" >
+                <img src="../../imagenes/PRODUCTOS/florero_rosas_amarillas.jpg" alt="florero rosas rosadas" >
            Florero Rosas Amarillas</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="#"> 
-                 <img src="../../imagenes/PRODUCTOS/exquisito_florero.jpg" alt="" >
+                 <img src="../../imagenes/PRODUCTOS/exquisito_florero.jpg" alt="exquisito florero" >
             Exquisito Florero</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="#">  
-                <img src="../../imagenes/PRODUCTOS/florero_gerberas.jpg" alt="" >
+                <img src="../../imagenes/PRODUCTOS/florero_gerberas.jpg" alt="florero gerberas" >
            Florero Gerberas</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="#">  
-                <img src="../../imagenes/PRODUCTOS/Florero_6_lilium.jpg" alt="" >
+                <img src="../../imagenes/PRODUCTOS/Florero_6_lilium.jpg" alt="florero 6 liliums" >
            Florero de 6 Liliums</a>
 
         </div>
 
         <div class="product-item" category="Floreros">
             <a href="#">   
-                <img src="../../imagenes/PRODUCTOS/florero_rosas_astromelias.jpg" alt="" >
+                <img src="../../imagenes/PRODUCTOS/florero_rosas_astromelias.jpg" alt="florero rosas astromelias" >
            Florero con Rosas Astromelias</a>
 
         </div>
