--- a/Paginas/Pagina_Categorias/rosas.html
+++ b/Paginas/Pagina_Categorias/rosas.html
@@ -76,13 +76,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="...">
+                    <img src="../../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="logo envio flores">
                   </div>
                   <div class="carousel-item">
-                    <img src="../../imagenes/EnvioFlores_2.png" class="d-flex" alt="...">
+                    <img src="../../imagenes/EnvioFlores_2.png" class="d-flex" alt="logo envio flores">
                   </div>
                   <div class="carousel-item">
-                    <img src="../../imagenes/EnvioFlores_4.png" class="d-flex" alt="...">
+                    <img src="../../imagenes/EnvioFlores_4.png" class="d-flex" alt="logo envio flores">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -153,37 +153,37 @@
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas\Pagina_productos/CajFerRosDiam.HTML">
-            <img src="../../imagenes/PRODUCTOS/caja_rosasdiamante_ferrero.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/caja_rosasdiamante_ferrero.jpg" alt="caja rosas diamante y ferrero rocher" >
              Caja Rosas Diamante con Ferrero Rocher</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina_productos/Caj18RosFer.html">
-            <img src="../../imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="caja 18 rosas y ferrero rocher" >
              Caja 18 Rosas Ferrero</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina_productos/Caj25Rosas.html">
-            <img src="../../imagenes/PRODUCTOS/Caj25ROS_ROSADAS.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/Caj25ROS_ROSADAS.jpg" alt="caja 25 rosas rosadas" >
              Caja 25 ROSAS ROSADAS</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina_productos/CoraFerRosas.html">
-            <img src="../../imagenes/PRODUCTOS/corazon_ferrero_Rosas.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/corazon_ferrero_Rosas.jpg" alt="corazon ferrero rocher y rosas" >
              Corazon de Rosas Y Ferrero</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina_productos/Caj50RosFer.html">
-            <img src="../../imagenes/PRODUCTOS/Caj50RosFer.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/Caj50RosFer.jpg" alt="caja 50 rosas y ferrero rocher" >
              Caja 50 rosas FERRERO ABIERTO</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina_productos/MinCajRosPel.html">
-            <img src="../../imagenes/PRODUCTOS/mini_Caja_rosas_peluche.jpg" alt="" >
+            <img src="../../imagenes/PRODUCTOS/mini_Caja_rosas_peluche.jpg" alt="mini caja rosas y peluche" >
              MINI CAJA ROSAS PELUCHE</a>
         </div>
 
