--- a/Paginas/Pagina_productos/Caj18RosFer.html
+++ b/Paginas/Pagina_productos/Caj18RosFer.html
@@ -137,7 +137,7 @@
 
       
   <div class="imagenproducto">
-            <img src="../../imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="">  </div>
+            <img src="../../imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="caja de 18 rosas y ferrero rocher">  </div>
 
         <!-- opciones de productos -->
     <div class="opcionesproducto">
