--- a/Paginas/Pagina_productos/Caj25Rosas.html
+++ b/Paginas/Pagina_productos/Caj25Rosas.html
@@ -135,7 +135,7 @@
 
       
   <div class="imagenproducto">
-            <img src="../../imagenes/PRODUCTOS/Caj25ROS_ROSADAS.jpg" alt="">  </div>
+            <img src="../../imagenes/PRODUCTOS/Caj25ROS_ROSADAS.jpg" alt="caja 25 rosas rosadas">  </div>
 
         <!-- opciones de productos -->
     <div class="opcionesproducto">
