--- a/Paginas/Pagina_productos/Caj50RosFer.html
+++ b/Paginas/Pagina_productos/Caj50RosFer.html
@@ -128,7 +128,7 @@
 
       
   <div class="imagenproducto">
-            <img src="../../imagenes/PRODUCTOS/Caj50RosFer.jpg" alt="">  </div>
+            <img src="../../imagenes/PRODUCTOS/Caj50RosFer.jpg" alt="caja 50 rosas y ferrero rocher">  </div>
 
         <!-- opciones de productos -->
     <div class="opcionesproducto">
