--- a/Paginas/Pagina_productos/CajFerRosDiam.HTML
+++ b/Paginas/Pagina_productos/CajFerRosDiam.HTML
@@ -127,7 +127,7 @@
         <h2 class="tituloproducto">Caja de Rosas Diamante & ferrero Rocher</h2>
 
         <div class="imagenproducto">
-                <img src="../../imagenes/PRODUCTOS/caja_rosasdiamante_ferrero.jpg" alt="">  
+                <img src="../../imagenes/PRODUCTOS/caja_rosasdiamante_ferrero.jpg" alt="caja rosas diamante y ferrero rocher">  
         </div>
 
         <!-- opciones de productos -->
