--- a/Paginas/Pagina_productos/CoraFerRosas.html
+++ b/Paginas/Pagina_productos/CoraFerRosas.html
@@ -131,7 +131,7 @@
 
       
     <div class="imagenproducto">
-            <img src="../../imagenes/PRODUCTOS/corazon_ferrero_Rosas.jpg" alt="">  
+            <img src="../../imagenes/PRODUCTOS/corazon_ferrero_Rosas.jpg" alt="corazon de ferrero rocher y rosas">  
     </div>
 
         <!-- opciones de productos -->
