--- a/Paginas/Pagina_productos/FloRosItaliano.html
+++ b/Paginas/Pagina_productos/FloRosItaliano.html
@@ -127,7 +127,7 @@
         <h2 class="tituloproducto">Florero Imperial de Rosas</h2>
 
         <div class="imagenproducto">
-                <img src="../../imagenes/PRODUCTOS/florero_imperial_rosas.jpg" alt="">  
+                <img src="../../imagenes/PRODUCTOS/florero_imperial_rosas.jpg" alt="florero imperial de rosas">  
         </div>
 
             <!-- opciones de productos -->
