--- a/Paginas/Pagina_productos/FloRosLilGer.html
+++ b/Paginas/Pagina_productos/FloRosLilGer.html
@@ -130,7 +130,7 @@
 
         
         <div class="imagenproducto">
-                <img src="../../imagenes/PRODUCTOS/florero_rosas_gerberas_lilium.jpg" alt="">  
+                <img src="../../imagenes/PRODUCTOS/florero_rosas_gerberas_lilium.jpg" alt="florero rosas y gerberas">  
         </div>
 
             <!-- opciones de productos -->
