--- a/Paginas/Pagina_productos/FloRosRosadas.html
+++ b/Paginas/Pagina_productos/FloRosRosadas.html
@@ -138,7 +138,7 @@
 
             
         <div class="imagenproducto">
-                    <img src="../../imagenes/PRODUCTOS/florero_rosas_rosadas.jpg" alt="">  
+                    <img src="../../imagenes/PRODUCTOS/florero_rosas_rosadas.jpg" alt="florero rosas rosadas">  
         </div>
 
                 <!-- opciones de productos -->
