--- a/Paginas/Pagina_productos/MinCajRosPel.html
+++ b/Paginas/Pagina_productos/MinCajRosPel.html
@@ -62,13 +62,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="...">
+                    <img src="../../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="logo envio flores">
                   </div>
                   <div class="carousel-item">
-                    <img src="../../imagenes/EnvioFlores_3.png" class="d-flex" alt="...">
+                    <img src="../../imagenes/EnvioFlores_3.png" class="d-flex" alt="logo envio flores">
                   </div>
                   <div class="carousel-item">
-                    <img src="../../imagenes/EnvioFlores_4.png" class="d-flex" alt="...">
+                    <img src="../../imagenes/EnvioFlores_4.png" class="d-flex" alt="logo envio flores">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -127,7 +127,7 @@
         <h2 class="tituloproducto">Mini Caja de Rosas y Peluche</h2>
             
         <div class="imagenproducto">
-                    <img src="../../imagenes/PRODUCTOS/mini_Caja_rosas_peluche.jpg" alt="">  
+                    <img src="../../imagenes/PRODUCTOS/mini_Caja_rosas_peluche.jpg" alt="mini caja rosas y peluche">  
         </div>
 
                 <!-- opciones de productos -->
