--- a/Paginas/Pagina_header/Costos_envio.html
+++ b/Paginas/Pagina_header/Costos_envio.html
@@ -54,13 +54,13 @@
     </div>
     <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="...">
+      <img src="../../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="logo envio flores">
     </div>
     <div class="carousel-item">
-      <img src="../../imagenes/EnvioFlores_3.png" class="d-flex" alt="...">
+      <img src="../../imagenes/EnvioFlores_3.png" class="d-flex" alt="logo envio flores">
     </div>
     <div class="carousel-item">
-      <img src="../../imagenes/EnvioFlores_4.png" class="d-flex" alt="...">
+      <img src="../../imagenes/EnvioFlores_4.png" class="d-flex" alt="logo envio flores">
     </div>
   </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
