detalles de escritura
corregí algunos errores de escritura que no permitian el buen funcionamiento de la pagina

--- a/Paginas/Pagina_Categorias/comestibles.html
+++ b/Paginas/Pagina_Categorias/comestibles.html
@@ -17,7 +17,7 @@
 
         <!-- LINK DE SASS -->
         <link rel="stylesheet" href="../../CSS/destino.css">
-        <link rel="stylesheet" href="../../Font.css">
+        <link rel="stylesheet" href="../../font.css">
 
 
 
@@ -43,7 +43,7 @@
             <div class="Seccion"><a href="../../index.html"><li>NOSOTROS</li></div></a> 
             <div class="Seccion"><li><a href="../../Paginas/Pagina_header/fechas_especiales.html"> Fechas Especiales </a></li></div>
 
-            <div class="Seccion"><li><a href="../../paginas/Pagina_header/Costos_envio.html">Costos de envio</a></li></div>
+            <div class="Seccion"><li><a href="../../Paginas/Pagina_header/Costos_envio.html">Costos de envio</a></li></div>
 
             <div class="Seccion"> <li><a href="../../Paginas/Pagina_header/Como_comprar.html">¿Como comprar?</a></li></div>
 
