--- a/Paginas/Pagina_productos/MinCajRosPel.html
+++ b/Paginas/Pagina_productos/MinCajRosPel.html
@@ -46,7 +46,7 @@
 
          <!-- ICONOS DE FACEBOOK E INSTAGRAM Y LOGO ENVIO FLORES-->
 
-            <div class="social bar">
+            <div class="social-bar">
                     <a href="http://facebook.com/flores.aflorar" class="icon icon-facebook2" target="_blank"></a>
                     <a href="http://instagram.com/aflorar.arg" class="icon icon-instagram" target="_blank"></a>
             </div>
