--- a/Paginas/Pagina_Categorias/rosas.html
+++ b/Paginas/Pagina_Categorias/rosas.html
@@ -20,7 +20,7 @@
 
         <!-- LINK DE SASS -->
         <link rel="stylesheet" href="../../CSS/destino.css">
-        <link rel="stylesheet" href="../../Font.css">
+        <link rel="stylesheet" href="../../font.css">
 
 
 
@@ -47,7 +47,7 @@
             <div class="Seccion"><a href="../../index.html"><li>NOSOTROS</div></a> 
             <div class="Seccion"><li><a href="../../Paginas/Pagina_header/fechas_especiales.html"> Fechas Especiales </a></div>
 
-            <div class="Seccion"><li><a href="../../paginas/Pagina_header/Costos_envio.html">Costos de envio</a></div>
+            <div class="Seccion"><li><a href="../../Paginas/Pagina_header/Costos_envio.html">Costos de envio</a></div>
 
             <div class="Seccion"> <li><a href="../../Paginas/Pagina_header/Como_comprar.html">¿Como comprar?</a></div>
 
