--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!------ LINK DE SASS ------>
     <link rel="stylesheet" href="CSS/destino.css">
 
-    <link rel="stylesheet" href="Font.css">
+    <link rel="stylesheet" href="font.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -43,7 +43,7 @@
 
             <div class="Seccion"><li><a href="index.html">NOSOTROS</li></a></div> 
             <div class="Seccion"><li><a href="Paginas/Pagina_header/fechas_especiales.html"> Fechas Especiales </a></li></div>
-            <div class="Seccion"><li><a href="paginas/Pagina_header/Costos_envio.html">Costos de envio</a></li></div>
+            <div class="Seccion"><li><a href="Paginas/Pagina_header/Costos_envio.html">Costos de envio</a></li></div>
             <div class="Seccion"> <li><a href="Paginas/Pagina_header/Como_comprar.html">¿Como comprar?</a></li></div>
             <div class="Seccion"> <li><a href="Paginas/Pagina_header/Registrate.html"> Registrate</a></li> </div>
 
